==> reweiser3/freETarget/Software/ESP32/freeETarget/main/diag_tools.c <==
#include "freETarget.h"
#include "gpio.h"
#include "diag_tools.h"
#include "nvs.h"
#include "nvs_flash.h"
#include "nonvol.h"
#include "analog_io.h"
#include "token.h"            // Time provided by the token ring
#include "json.h"
#include "stdio.h"
#include "esp_random.h"
#include "compute_hit.h"
#include "math.h"
#include "serial_io.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "C:\Users\allan\esp\esp-idf\esp-idf\components\hal\include\hal\gpio_types.h"
#include "C:\Users\allan\esp\esp-idf\esp-idf\components\hal\include\hal\adc_types.h"
#include "C:\Users\allan\esp\esp-idf\esp-idf\components\esp_adc\include\esp_adc\adc_oneshot.h"
#include "timer.h"
#include "esp_timer.h"
#include "dac.h"
#define TICK(x) (((x) / 0.33) * OSCILLATOR_MHZ)   // Distance in clock ticks
#define RX(Z,X,Y) (16000 - (sqrt(sq(TICK(x)-s[(Z)].x) + sq(TICK(y)-s[(Z)].y))))
#define GRID_SIDE 25                              // Should be an odd number
#define TEST_SAMPLES ((GRID_SIDE)*(GRID_SIDE))

void self_test
(
  unsigned int test                 // What test to execute
)
{
  unsinged int i;

  
/*
 * Figure out what test to run
 */
  switch (test)
  {
/*
 * Test 0, Display the help
 */
    default:                // Undefined, show the tests
    case T_HELP:                
      printf("\r\n 1 - Digital inputs");
      printf("\r\n 2 - Advance paper backer");
      printf("\r\n 3 - LED brightness test");

      printf("\r\n 3 - Counter values (internal trigger)");



      printf("\r\n 5 - Face strike test");
      printf("\r\n 6 - WiFi test");
      printf("\r\n 7 - Count on the LEDs");
      printf("\r\n");
      break;

/*
 * Test 1, Display GPIO inputs
 */
    case T_DIGITAL: 
      digital_test();
      break;

/*
 * Test 2, Advance the paper
 */
    case T_PAPER:
      printf("\r\nAdvancing paper %d ms", json_paper_time);
      paper_on_off(true);
      vTaskDelay(ONE_SECOND * json_paper_time / 1000);
      paper_on_off(false);
      printf(" done\r\n");
      break;

/*
 * Test 3, Set the LED bightness
 */
    case T_LED:
      printf("\r\nCycling the LED");
      for (i=0; i <= 100; i += 5)
      {
        
      }
      paper_on_off(true);
      vTaskDelay(ONE_SECOND * json_paper_time / 1000);
      paper_on_off(false);
      printf(" done\r\n");
      break;
  }
 
 /* 
  *  All done, return;
  */
    return;
}

void set_trip_point(int x)
{
  int   channel;              // DAC channel
  float value;                // Voltage to write

/*
 * Prompt for the settings
 */
  printf("\r\nChannel (0-3): ");
  channel = get_int();
  if ( (channel < 0 ) || (channel > C_MAX))
  {
    printf("/r/nInvalid channel");
    return;
  }

  printf("\r\nVoltage (0-2.047): ");
  value = get_float(); 
  if ( (value < 0 ) || (value > V_MAX))
  {
    printf("/r/nInvalid Voltage");
    return;
  }

/*
 *  Output the value
 */  
  dac_write(channel, value);

/*
  * Return
  */
  return;
}

bool_t do_dlt
  (
  unsigned int level
  )
{ 
  if ((level & (is_trace | DLT_CRITICAL)) == 0 )
  {
    return false;      // Send out if the trace is higher than the level 
  }

  printf("\n\r%10.6fs ",esp_timer_get_time()/1000000.0 );

  return true;
}
